<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".SignInActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_app_back"
            android:contentDescription="@string/img_app_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:alpha="0.9"
            android:src="@drawable/img_app_back"
            tools:ignore="MissingConstraints" />

        <android.support.v4.widget.Space
            android:id="@+id/space"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/img_app_back"
            app:layout_constraintLeft_toLeftOf="@id/img_app_back"
            app:layout_constraintRight_toRightOf="@id/img_app_back" />

        <android.support.v4.widget.Space
            android:id="@+id/space_center"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/img_app_back"
            app:layout_constraintBottom_toBottomOf="@+id/img_app_back"
            app:layout_constraintLeft_toLeftOf="@id/img_app_back"
            app:layout_constraintRight_toRightOf="@id/img_app_back" />

        <ImageView
            android:id="@+id/ic_signin"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/ic_user_signin"
            app:srcCompat="@drawable/ic_bus_logo_white"
            app:layout_constraintBottom_toBottomOf="@+id/space_center"
            app:layout_constraintLeft_toLeftOf="@+id/space_center"
            app:layout_constraintRight_toRightOf="@+id/space_center"
            app:layout_constraintTop_toTopOf="@+id/space_center"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline_05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".05" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_95"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".95" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/background_light"
            app:cardCornerRadius="14dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_95"
            app:layout_constraintStart_toStartOf="@+id/guideline_05"
            app:layout_constraintTop_toBottomOf="@+id/space">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="changeTraveller"
                        android:background="?attr/selectableItemBackground"
                        android:layout_weight="1">
                        <ImageView
                            android:id="@+id/ic_user_traveller"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:contentDescription="Traveller"
                            android:src="@drawable/ic_traveller_blue"
                            android:padding="6dp"
                            android:scaleType="fitXY"
                            android:adjustViewBounds="true"
                            android:layout_centerHorizontal="true"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="changeConductor"
                        android:background="?attr/selectableItemBackground"
                        android:layout_weight="1">
                    <ImageView
                        android:id="@+id/ic_conductor"
                        android:layout_width="46dp"
                        android:layout_height="46dp"
                        android:src="@drawable/ic_conductor_gray"
                        android:contentDescription="Conductor"
                        android:padding="6dp"
                        android:scaleType="fitXY"
                        android:adjustViewBounds="true"
                        android:layout_centerHorizontal="true"/>
                    </RelativeLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <View
                        android:id="@+id/view_change_user"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimaryDark"
                        android:layout_below="@id/ic_user_traveller"/>
                    <android.support.v4.widget.Space
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>
                </LinearLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tb_username_signin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:drawableStart="@drawable/ic_username_logo"
                        android:drawablePadding="5dp"
                        android:ems="10"
                        android:hint="@string/tb_username_signin"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/gray" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="15dp"
                    app:passwordToggleEnabled="true">


                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tb_password_signin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:drawableStart="@drawable/ic_password_logo"
                        android:drawablePadding="5dp"
                        android:ems="10"
                        android:hint="@string/tb_password_signin"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/gray" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/lbl_forgot_password"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="15dp"
                    android:text="Forgot Password?"
                    android:gravity="center_horizontal"
                    android:onClick="forgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button

                    android:id="@+id/btn_signin"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_rounded"
                    android:enabled="false"
                    android:onClick="signIn"
                    android:text="@string/btn_signin"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_95"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_05"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.0">

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toTopOf="parent">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/txt_or"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:id="@+id/txt_or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/txt_or"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/txt_or"
                    android:background="@color/colorPrimary" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="15dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@drawable/button_rounded"
                android:text="@string/btn_signup"
                android:onClick="signUp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>